--- a/web-app/src/app/Pages/signup-page/signup-page.component.html
+++ b/web-app/src/app/Pages/signup-page/signup-page.component.html
@@ -40,7 +40,7 @@
           type="password"
         />
       </div>
-      <button id="signupPageButton">Sign Up</button>
+      <button mat-raised-button id="signupPageButton">Sign Up</button>
     </div>
   </div>
 </div>
