--- a/web-app/src/app/Pages/settings-page/settings-page.component.scss
+++ b/web-app/src/app/Pages/settings-page/settings-page.component.scss
@@ -69,7 +69,7 @@ $buttonBorderColor: rgb(138, 43, 226);
   display: flex;
   justify-content: space-between;
   padding: 2% 5% 2% 5%;
-  margin-bottom: 5%;
+  margin-bottom: 1%;
   align-items: center;
 }
 
@@ -181,6 +181,20 @@ $buttonBorderColor: rgb(138, 43, 226);
   border: none;
   background-color: #a4508b;
   background-image: linear-gradient(326deg, #a4508b 0%, #5f0a87 74%);
+  padding: 8px 0px 8px 0px;
+  margin-top: 2vh;
+}
+
+.settingsModalBackButton {
+  color: white;
+  width: 100%;
+  height: 6vh;
+  border-radius: 5px;
+  border: none;
+  background: #27695A;
+background: -webkit-linear-gradient(top left, #27695A, #1C278C);
+background: -moz-linear-gradient(top left, #27695A, #1C278C);
+background: linear-gradient(to bottom right, #27695A, #1C278C);
   padding: 8px 0px 8px 0px;
   margin-top: 2vh;
 }
