Fix nav bar for all pages.

--- a/web-app/src/app/Pages/main-page/main-page.component.html
+++ b/web-app/src/app/Pages/main-page/main-page.component.html
@@ -1,25 +1,18 @@
-<div id="actorPageBackground">
-    <div id="landingPageNavBar">
-      <span id="landingPageLogo"
-        ><p>Movie</p>
-        Generator</span
-      >
+<div id="actorPageModal">
+  <div id="actorPageInnerDiv">
+    <input [(ngModel)]="searchBarText" type="text" name="searchBarText" id="searchBarText"
+      placeholder="Search Movie Generator">
+    <div id="category">
+      <h1>Featured Today</h1>
     </div>
-    <div id="actorPageModal">
-      <div id="actorPageInnerDiv">
-        <input [(ngModel)]="searchBarText" type="text" name="searchBarText" id="searchBarText" placeholder="Search Movie Generator">
-        <div id="category">
-            <h1>Featured Today</h1>
-        </div>
-        <div id="category">
-            <h1>Explore From Your Watchlist</h1>
-        </div>
-        <div id="category">
-            <h1>Fan Favorites</h1>
-        </div>
-        <div id="category">
-            <h1>Top Box Office (US)</h1>
-        </div>
-      </div>
+    <div id="category">
+      <h1>Explore From Your Watchlist</h1>
+    </div>
+    <div id="category">
+      <h1>Fan Favorites</h1>
+    </div>
+    <div id="category">
+      <h1>Top Box Office (US)</h1>
     </div>
   </div>
+</div>
