--- a/web-app/src/app/Pages/resetpassword-page/resetpassword-page.component.html
+++ b/web-app/src/app/Pages/resetpassword-page/resetpassword-page.component.html
@@ -1,68 +1,45 @@
-<div id="resetPasswordPageBackground">
-    <div id="resetPasswordPageNavBar">
-      <span id="resetPasswordPageLogo">
-        <p>Movie</p>
-        Generator</span
-      >
+<mat-stepper linear #stepper>
+  <!-- Step 1: Enter Email -->
+  <mat-step editable="false">
+    <ng-template matStepLabel>Enter Email</ng-template>
+    <div id="resetPasswordPageModal">
+      <div id="resetPasswordPageInnerDiv">
+        <h1 id="resetPasswordPageHeader">Enter Email</h1>
+        <div id="resetPasswordPageInputDiv">
+          <label for="password" id="resetPasswordPageLabel">Email</label>
+          <input class="resetPasswordPageInput" type="text" [(ngModel)]="email" />
+        </div>
+        <button (click)="onSendCode()" matStepperNext mat-raised-button id="resetPasswordPageButton">Send
+          Code</button>
+      </div>
     </div>
-    <mat-stepper linear #stepper>
-        <!-- Step 1: Enter Email -->
-        <mat-step editable="false">
-            <ng-template matStepLabel>Enter Email</ng-template>
-            <div id="resetPasswordPageModal">
-                <div id="resetPasswordPageInnerDiv">
-                    <h1 id="resetPasswordPageHeader">Enter Email</h1>
-                    <div id="resetPasswordPageInputDiv">
-                        <label for="password" id="resetPasswordPageLabel">Email</label>
-                        <input
-                            class="resetPasswordPageInput"
-                            type="text"
-                            [(ngModel)]="email"
-                        />
-                    </div>
-                    <button (click)="onSendCode()" matStepperNext mat-raised-button id="resetPasswordPageButton">Send Code</button>
-                </div>
-            </div>
-        </mat-step>
+  </mat-step>
 
-        <!-- Step 2: Enter New Password -->
-        <mat-step editable="false">
-            <ng-template matStepLabel>Enter New Password</ng-template>
-            <div id="resetPasswordPageModal">
-                <div id="resetPasswordPageInnerDiv">
-                    <h1 id="resetPasswordPageHeader">Reset Password</h1>
-                    <div id="resetPasswordPageInputDiv">
-                        <label for="password" id="resetPasswordPageLabel">New Password</label>
-                        <input
-                            class="resetPasswordPageInput"
-                            type="password"
-                            [(ngModel)]="enteredPassword"
-                        />
-                        <label for="password" id="resetPasswordPageLabel">Confirm Password</label>
-                        <input 
-                            class="resetPasswordPageInput" 
-                            type="password"
-                            [(ngModel)]="confirmedPassword"
-                        /> 
-                        <label id="resetPasswordPageLabel">Verification Code</label>
-                        <input 
-                            class="resetPasswordPageInput" 
-                            type="text"
-                            [(ngModel)]="verificationCode"
-                        /> 
-                    </div>
-                    <button (click)="onResetPassword()" matStepperNext mat-raised-button id="resetPasswordPageButton">Reset Password</button>
-                    <button mat-button (click)="stepper.reset()">Back</button>
-                </div>
-            </div>
-        </mat-step>
+  <!-- Step 2: Enter New Password -->
+  <mat-step editable="false">
+    <ng-template matStepLabel>Enter New Password</ng-template>
+    <div id="resetPasswordPageModal">
+      <div id="resetPasswordPageInnerDiv">
+        <h1 id="resetPasswordPageHeader">Reset Password</h1>
+        <div id="resetPasswordPageInputDiv">
+          <label for="password" id="resetPasswordPageLabel">New Password</label>
+          <input class="resetPasswordPageInput" type="password" [(ngModel)]="enteredPassword" />
+          <label for="password" id="resetPasswordPageLabel">Confirm Password</label>
+          <input class="resetPasswordPageInput" type="password" [(ngModel)]="confirmedPassword" />
+          <label id="resetPasswordPageLabel">Verification Code</label>
+          <input class="resetPasswordPageInput" type="text" [(ngModel)]="verificationCode" />
+        </div>
+        <button (click)="onResetPassword()" matStepperNext mat-raised-button id="resetPasswordPageButton">Reset
+          Password</button>
+        <button mat-button (click)="stepper.reset()">Back</button>
+      </div>
+    </div>
+  </mat-step>
 
-        <!-- Step 3: Done -->
-        <mat-step>
-            <ng-template matStepLabel>Done</ng-template>
-            <p>Your Password has been changed successfully</p>
-            <button mat-button (click)="stepper.reset()">Back</button>
-        </mat-step>
-    </mat-stepper>
-  </div>
-  
+  <!-- Step 3: Done -->
+  <mat-step>
+    <ng-template matStepLabel>Done</ng-template>
+    <p>Your Password has been changed successfully</p>
+    <button mat-button (click)="stepper.reset()">Back</button>
+  </mat-step>
+</mat-stepper>
