--- a/web-app/src/app/Pages/signup-page/signup-page.component.html
+++ b/web-app/src/app/Pages/signup-page/signup-page.component.html
@@ -1,46 +1,13 @@
-<div id="signupPageBackgroud">
-  <div id="landingPageNavBar">
-    <span id="landingPageLogo"
-      ><p>Movie</p>
-      Generator</span
-    >
-  </div>
-  <div id="signupPageModal">
-    <div id="signupPageInnerDiv">
-      <h1 id="signupPageHeader">Sign Up</h1>
-      <div id="signupPageInputDiv">
-        <input
-          [(ngModel)]="signupFirstName"
-          placeholder="First Name"
-          class="signupPageInput"
-          type="text"
-        />
-        <input
-          [(ngModel)]="signupLastName"
-          placeholder="Last Name"
-          class="signupPageInput"
-          type="text"
-        />
-        <input
-          [(ngModel)]="signupEmail"
-          placeholder="Email Address"
-          class="signupPageInput"
-          type="email"
-        />
-        <input
-          [(ngModel)]="signupPassword"
-          placeholder="Password"
-          class="signupPageInput"
-          type="password"
-        />
-        <input
-          [(ngModel)]="signupConfirm"
-          placeholder="Confirm Password"
-          class="signupPageInput"
-          type="password"
-        />
-      </div>
-      <button mat-raised-button id="signupPageButton">Sign Up</button>
+<div id="signupPageModal">
+  <div id="signupPageInnerDiv">
+    <h1 id="signupPageHeader">Sign Up</h1>
+    <div id="signupPageInputDiv">
+      <input [(ngModel)]="signupFirstName" placeholder="First Name" class="signupPageInput" type="text" />
+      <input [(ngModel)]="signupLastName" placeholder="Last Name" class="signupPageInput" type="text" />
+      <input [(ngModel)]="signupEmail" placeholder="Email Address" class="signupPageInput" type="email" />
+      <input [(ngModel)]="signupPassword" placeholder="Password" class="signupPageInput" type="password" />
+      <input [(ngModel)]="signupConfirm" placeholder="Confirm Password" class="signupPageInput" type="password" />
     </div>
+    <button mat-raised-button id="signupPageButton" (click)="onSignUp()">Sign Up</button>
   </div>
 </div>
