--- a/web-app/src/app/app.component.html
+++ b/web-app/src/app/app.component.html
@@ -1,1 +1,4 @@
-<router-outlet></router-outlet>
+<app-nav-bar></app-nav-bar>
+<div class="router-page">
+    <router-outlet></router-outlet>
+</div>
